--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ a {
 img {
 	max-width: 100%;
 	height: auto;
+    display: block;
 }
 
 .container {
@@ -104,6 +105,10 @@ img {
     font-weight: 600;
 }
 
+.navItem a:hover {
+    color: #2C4832;
+}
+
 .cartLink {
     margin-left: 20px;
 }
@@ -111,6 +116,109 @@ img {
 /* banner */
 .banner {
     margin-bottom: 60px;
+}
+
+/* main */
+.main {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 60px;
+}
+
+/* menu */
+.menu {
+    width: 300px;
+    font-size: 24px;
+    line-height: 1.6;
+    text-align: center;
+}
+
+.menu h2 {
+    color: #EAF0ED;
+    background-color: #3F5D45;
+    padding: 16px 0;
+}
+
+.menuItem {
+    padding: 16px 0;
+    border: 1px solid #EAF0ED;
+}
+
+.menuItem:hover {
+    cursor: pointer;
+    background-color: #EAF0ED;
+}
+
+/* product */
+.product {
+    width: 620px;
+    text-align: center;
+}
+
+.productList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.productTitle {
+    font-size: 20px;
+    line-height: 1;
+    display: flex;
+    justify-content: space-between;
+}
+
+.productTitle p {
+    font-weight: 200;
+    padding: 14px 34px;
+    border-left: 1px solid #EAF0ED;
+    border-right: 1px solid #EAF0ED;
+}
+
+.productTitle span {
+    font-weight: 600;
+    padding: 14px 20px 14px 25px;
+    border-right: 1px solid #EAF0ED;
+}
+
+.shopping {
+    font-size: 24px;
+    line-height: 1;
+    background-color: #EAF0ED;
+    padding: 16px 0;
+}
+
+.shopping:hover {
+    cursor: pointer;
+}
+
+/* pagination */
+.pagination {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.pageItem {
+    padding: 17px;
+    border: 1px solid #EAF0ED;
+}
+
+.pageItem:hover {
+    cursor: pointer;
+}
+
+.pageItemNum a {
+    padding: 18px 24px;
+    border: 1px solid #EAF0ED;
+}
+
+.pageItemNum a:hover {
+    color: #EAF0ED;
+    background-color: #3F5D45;
+    cursor: pointer;
 }
 
 /* footer */
@@ -133,6 +241,7 @@ img {
 .footerInfo {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 30px;
 }
 
